--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,20 @@ section#chats {
     width: 34%;
 }
 
-section#profile-user,
+section.profile-user,
 section#silence-notifications {
     height: 50px;
 }
 
-div#user img {
+section.profile-user {
+    background-color: #eaeaea;
+}
+
+div.user img {
     height: 35px;
 }
 
-div#user span {
+div.user span {
     font-size: .75rem;
 }
 
@@ -59,7 +63,34 @@ div#active_notifications a {
 }
 
 section#conversation {
-    background-color: aqua;
+    /* background-color: aqua; */
     height: 100%;
     width: 66%;
+}
+
+section#chat {
+    height: 100%;
+}
+
+section#chat img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+section#new-message {
+    height: 50px;
+}
+
+section#new-message div {
+    background-color: #f3eeea;
+}
+
+section#new-message div input {
+    border-radius: 10px;
+}
+
+section#new-message div span {
+    border: none;
+    background-color: #f3eeea;
 }
