--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ section#conversation {
     width: 66%;
 }
 
+section#conversation section.profile-user {
+    border-left: 1px solid rgb(221, 219, 219);
+}
+
 section#chat {
     height: 100%;
     background-image: url('../img/mine.jpg');
@@ -112,7 +116,7 @@ section#chat span.time {
 
 div.recive-message,
 div.sent-message {
-    padding: .75rem;
+    padding: .5rem .75rem;
     width:35%;
     border-radius: 8px;
     margin-top: 1rem;
