--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,11 @@
 body{
     font-family: 'Roboto', sans-serif;
-    background-color: #dadbd2;
-}
-
-section#my_bg {
-    background-color: #009688;
+    background-image:
+        linear-gradient(to bottom,
+        #009688 0px,
+        #009688 15vh,
+        #dddbd1 15vh,
+        #d2dbdc 100%);
 }
 
 div.container {
@@ -108,10 +109,8 @@ section#conversation section.profile-user {
 
 section#chat {
     height: 100%;
+    padding: 1.5rem;
     background-image: url('../img/mine.jpg');
-    background-position: center;
-    background-repeat: none;
-    background-size: cover;
 }
 
 section#chat span.time {
@@ -121,10 +120,9 @@ section#chat span.time {
     bottom: 2px;
 }
 
-div.recive-message,
-div.sent-message {
+div.message {
     padding: .5rem .75rem;
-    width:35%;
+    width: 37.5%;
     border-radius: 8px;
     margin-top: 1rem;
     position: relative;
