--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,8 @@ section#start-new-chat input {
     border-color: rgb(247, 247, 247);
 }
 
-section#chats-view ul {
+section#chats-view ul,
+div.message-menu ul {
     padding: 0;
     list-style-type: none;
 }
@@ -149,6 +150,25 @@ div.sent-message {
     background-color: #d5f9ba;    
     margin-left: auto;
 }
+
+div.message-menu {
+    background-color: white;
+    opacity: .8;
+    position: absolute;
+    z-index: 5;
+    top: 20px;
+    left: 70px;
+    border-radius: 10px;
+}
+
+div.message-menu ul li {
+    font-size: .75rem;  
+    cursor: pointer;
+}
+
+div.message-menu ul li:first-child {
+    margin-bottom: .5rem;
+}  
 
 section#new-message div {
     background-color: #f3eeea;
